--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ click==8.1.3
 colorama==0.4.6
 colorcet==3.0.1
 comm==0.1.3
-contourpy==1.0.7
+'contourpy==1.0.7'
 cycler==0.11.0
 debugpy==1.6.7
 decorator==5.1.1
