--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+git+https://github.com/SamiTorjmen/Data-Visualisation-Project-Panel/tree/master/dashboard
 backcall==0.2.0
 bleach==6.0.0
 bokeh==2.4.3
